# swig-examples

./: .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle
adding_java_downcasts_to_polymorphic_return_types/: CMakeLists.txt
adding_java_downcasts_to_polymorphic_return_types/src/main/java/io/jiffy/example/: AddingJavaDowncastsToPolymorphicReturnTypes.java  AddingJavaDowncastsToPolymorphicReturnTypesJNI.java  Ambulance.java  Vehicle.java  adding_java_downcasts_to_polymorphic_return_typesJAVA_wrap.cxx
adding_java_downcasts_to_polymorphic_return_types/src/main/swig/: adding_java_downcasts_to_polymorphic_return_types.i
adding_java_downcasts_to_polymorphic_return_types/src/test/java/io/jiffy/example/: Runme.java
clazz/: CMakeLists.txt
clazz/src/main/java/io/jiffy/example/: Circle.java  Shape.java  Square.java  clazz.java  clazzJAVA_wrap.cxx  clazzJNI.java
clazz/src/main/swig/: clazz.i
clazz/src/test/java/io/jiffy/example/: Runme.java
constants/: CMakeLists.txt
constants/src/main/java/io/jiffy/example/: Constants.java  ConstantsConstants.java  ConstantsJNI.java  constantsJAVA_wrap.cxx
constants/src/main/swig/: constants.i
constants/src/test/java/io/jiffy/example/: Runme.java
converting_java_string_arrays_to_charxx/: CMakeLists.txt
converting_java_string_arrays_to_charxx/src/main/java/io/jiffy/example/: ConvertingJavaStringArraysToCharxx.java  ConvertingJavaStringArraysToCharxxJNI.java  converting_java_string_arrays_to_charxx.java  converting_java_string_arrays_to_charxxJAVA_wrap.c  converting_java_string_arrays_to_charxxJNI.java
converting_java_string_arrays_to_charxx/src/main/swig/: converting_java_string_arrays_to_charxx.i
special_variable/: CMakeLists.txt
special_variable/src/main/java/io/jiffy/example/: Callback.java  Caller.java  special_variable.java  special_variableJAVA_wrap.cxx  special_variableJAVA_wrap.h  special_variableJNI.java
special_variable/src/main/swig/: special_variable.i
special_variable/src/test/java/io/jiffy/example/: Runme.java
src/main/java/io.jiffy.example/: Callback.java  Caller.java  Runme.java  example.java  exampleJAVA_wrap.cxx  exampleJNI.java
